@@ -1,0 +1,36 @@
+query: DROP TABLE s3log
+query: CREATE TABLE s3log
+ROW FORMAT SERDE 'org.apache.hadoop.hive.contrib.serde2.s3.S3LogDeserializer'
+STORED AS TEXTFILE
+query: DESCRIBE s3log
+bucketowner	string	from deserializer
+bucketname	string	from deserializer
+rdatetime	string	from deserializer
+rip	string	from deserializer
+requester	string	from deserializer
+requestid	string	from deserializer
+operation	string	from deserializer
+rkey	string	from deserializer
+requesturi	string	from deserializer
+httpstatus	int	from deserializer
+errorcode	string	from deserializer
+bytessent	int	from deserializer
+objsize	int	from deserializer
+totaltime	int	from deserializer
+turnaroundtime	int	from deserializer
+referer	string	from deserializer
+useragent	string	from deserializer
+query: LOAD DATA LOCAL INPATH '../contrib/data/files/s3.log' INTO TABLE s3log
+query: SELECT a.* FROM s3log a
+Input: default/s3log
+Output: file:/data/users/zshao/tools/deploy-trunk-apache-hive/build/ql/tmp/267321215/10000
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:01 +0000	212.143.99.188	65a011a29cdf8ec533ec3d1ccaae921c	D987234E52141DE7	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=4560525f-2864-495c-842c-159ede7143f8 HTTP/1.1	200	-	828	828	3	2	http://www.mediafuturist.com/2009/02/marc-andreessen-on-the-charlie-rose-show-talking-about-mobile-technology-video.html	Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US) AppleWebKit/525.19 (KHTML, like Gecko) Chrome/1.0.154.53 Safari/525.19
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:01 +0000	74.244.182.35	65a011a29cdf8ec533ec3d1ccaae921c	626EECA20AB12A5C	REST.GET.OBJECT	pixy.gif	GET /pixy.gif HTTP/1.1	200	-	828	828	20	20	http://trueslant.com/	Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10_5_6; en-us) AppleWebKit/528.16 (KHTML, like Gecko) Version/4 Public Beta Safari/528.16
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:02 +0000	62.149.175.120	65a011a29cdf8ec533ec3d1ccaae921c	3E93D70E69292C98	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=9fec752e-2318-4da3-864e-ac5b9e47c4ae HTTP/1.0	200	-	828	828	4	3	-	-
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:02 +0000	77.116.56.145	65a011a29cdf8ec533ec3d1ccaae921c	2FD33BC70C93C97A	REST.GET.OBJECT	pixie.png	GET /pixie.png?x-id=3300b26b-4455-47cb-800f-8fe7d80a6b39 HTTP/1.1	200	-	900	900	5	5	http://greenerloudoun.wordpress.com/2008/05/29/swarming-behavior/	Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.9.0.8) Gecko/2009032609 Firefox/3.0.8
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:03 +0000	62.149.175.120	65a011a29cdf8ec533ec3d1ccaae921c	2AC19D72E1DD76E1	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=9fec752e-2318-4da3-864e-ac5b9e47c4ae HTTP/1.0	200	-	828	828	7	6	-	-
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:03 +0000	62.149.175.120	65a011a29cdf8ec533ec3d1ccaae921c	C6DB555CD238EEA0	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=9fec752e-2318-4da3-864e-ac5b9e47c4ae HTTP/1.0	200	-	828	828	6	5	-	-
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:06 +0000	68.209.136.23	65a011a29cdf8ec533ec3d1ccaae921c	42C8E7EEF98D46BC	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=78ad075e-832f-4006-a89e-7b5e2978674e HTTP/1.1	200	-	828	828	5	4	http://continuityblog.wordpress.com/category/ragdoll/	Mozilla/5.0 (Windows; U; []  Windows NT 5.1; en-US; rv:1.9.0.8) Gecko/2009032609 Firefox/3.0.8
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:06 +0000	68.209.136.23	65a011a29cdf8ec533ec3d1ccaae921c	E5781B471524E1BB	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=f596477d-b317-8882-8d14-0b8f168f5e8e HTTP/1.1	200	-	828	828	4	3	http://continuityblog.wordpress.com/category/ragdoll/	Mozilla/5.0 (Windows; U; Win[ s]dows NT 5.1; en-US; rv:1.9.0.8) Gecko/2009032609 Firefox/3.0.8
+04ff331638adc13885d6c42059584deabbdeabcd55bf0bee491172a79a87b196	img.zemanta.com	09/Apr/2009:22:00:07 +0000	190.225.84.114	65a011a29cdf8ec533ec3d1ccaae921c	F4FC3FEAD8C00024	REST.GET.OBJECT	pixy.gif	GET /pixy.gif?x-id=23d25db1-160b-48bb-a932-e7dc1e88c321 HTTP/1.1	304	-	NULL	828	3	NULL	http://www.viamujer.com/2009/03/horoscopo-acuario-abril-mayo-y-junio-2009/	Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; .NET CLR 1.1.4322; .NET CLR 2.0.50727)
+query: DROP TABLE s3log
